# hassan-kamran.github.io

./: .gitignore  404.html  CLAUDE.md  CNAME  LICENSE  README.md  _headers  _redirects  about.html  blog-2.html  blog-3.html  blog.html  contact.html  gallery.html  generate.py  generate_search_index.py  generate_website.py  index.html  main.py  package-lock.json  privacy.html  pyproject.toml  requirements.txt  resume.html  robots.txt  serve.py  services.html  site_config.yaml  sitemap-images.txt  sitemap-images.xml  sitemap.xml  term.html  terms.html  test.js
assets-src/: favicon.html  og-card.html
blogs/: # The Future of Serverless Computing.html.html  aptex-25-nust.html  blog-1.html  development-of-a-drone-with-an-integrated-sprayer-system-for-precision-agriculture.html  fedgan-federated-diabetic-retinopathy-image-generation.html  hamburger-menu-with-popovertarget-and-not-javascript.html  how-I-built-this-website.html  how-to-integrate-mini-search-in-your-static-website.html  low-Cost-teleoperated-drone-with-integrated-sprayer-for-precision-agriculture.html  low-Costl-teleoperated-drone-with-integrated-sprayer-for-precision-agriculture.html  making-your-website-seo-friendly.html  planning-a-website.html  static-site-generation-with-jinga2.html  what-is-a-brand-manual-and-why-its-important.html
services/: ai-consulting.html  software-development.html  technical-leadership.html  technical-project-management.html  training.html
site_generator/: __init__.py  config.py  content.py  core.py  generator.py  pages.py  utils.py
static/: DCGAN_Generator_Architecture.avif  (+147 more)
(+58 files in other folders)
