[project]
name = "hassan-kamran-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "bs4>=0.0.2",
    "cssutils>=2.11.1",
    "jinja2>=3.1.5",
    "markdown>=3.7",
    "pip>=25.0.1",
    "pymdown-extensions>=10.14.3",
    "watchdog[watchmedo]>=6.0.0",
]

[tool.uv.workspace]
members = ["django"]
